comperr
[Warning] @,: Compiler version mismatch: Have 14.2.0; expected version >= 9.0.0 and < 10.0.0
Building project ESP_Software (NUCLEO_F401RE, GCC_ARM)
Scan: ESP_Software
Compile [ 99.8%]: QEI.cpp
[Error] QEI.cpp@154,19: no matching function for call to 'mbed::InterruptIn::rise(QEI*, void (QEI::*)())'
[Error] QEI.cpp@155,19: no matching function for call to 'mbed::InterruptIn::fall(QEI*, void (QEI::*)())'
[Error] QEI.cpp@159,23: no matching function for call to 'mbed::InterruptIn::rise(QEI*, void (QEI::*)())'
[Error] QEI.cpp@160,23: no matching function for call to 'mbed::InterruptIn::fall(QEI*, void (QEI::*)())'
[Error] QEI.cpp@164,20: no matching function for call to 'mbed::InterruptIn::rise(QEI*, void (QEI::*)())'
[ERROR] ./QEI/QEI.cpp: In constructor 'QEI::QEI(PinName, PinName, PinName, int, Encoding)':
./QEI/QEI.cpp:154:19: error: no matching function for call to 'mbed::InterruptIn::rise(QEI*, void (QEI::*)())'
  154 |     channelA_.rise(this, &QEI::encode);
      |     ~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~
In file included from ./mbed-os/drivers/include/drivers/BufferedSerial.h:27,
                 from ./mbed-os/mbed.h:73,
                 from ./QEI/QEI.h:132,
                 from ./QEI/QEI.cpp:129:
./mbed-os/drivers/include/drivers/InterruptIn.h:106:10: note: candidate: 'void mbed::InterruptIn::rise(mbed::Callback<void()>)'
  106 |     void rise(Callback<void()> func);
      |          ^~~~
./mbed-os/drivers/include/drivers/InterruptIn.h:106:10: note:   candidate expects 1 argument, 2 provided
./QEI/QEI.cpp:155:19: error: no matching function for call to 'mbed::InterruptIn::fall(QEI*, void (QEI::*)())'
  155 |     channelA_.fall(this, &QEI::encode);
      |     ~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~
./mbed-os/drivers/include/drivers/InterruptIn.h:113:10: note: candidate: 'void mbed::InterruptIn::fall(mbed::Callback<void()>)'
  113 |     void fall(Callback<void()> func);
      |          ^~~~
./mbed-os/drivers/include/drivers/InterruptIn.h:113:10: note:   candidate expects 1 argument, 2 provided
./QEI/QEI.cpp:159:23: error: no matching function for call to 'mbed::InterruptIn::rise(QEI*, void (QEI::*)())'
  159 |         channelB_.rise(this, &QEI::encode);
      |         ~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~
./mbed-os/drivers/include/drivers/InterruptIn.h:106:10: note: candidate: 'void mbed::InterruptIn::rise(mbed::Callback<void()>)'
  106 |     void rise(Callback<void()> func);
      |          ^~~~
./mbed-os/drivers/include/drivers/InterruptIn.h:106:10: note:   candidate expects 1 argument, 2 provided
./QEI/QEI.cpp:160:23: error: no matching function for call to 'mbed::InterruptIn::fall(QEI*, void (QEI::*)())'
  160 |         channelB_.fall(this, &QEI::encode);
      |         ~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~
./mbed-os/drivers/include/drivers/InterruptIn.h:113:10: note: candidate: 'void mbed::InterruptIn::fall(mbed::Callback<void()>)'
  113 |     void fall(Callback<void()> func);
      |          ^~~~
./mbed-os/drivers/include/drivers/InterruptIn.h:113:10: note:   candidate expects 1 argument, 2 provided
./QEI/QEI.cpp:164:20: error: no matching function for call to 'mbed::InterruptIn::rise(QEI*, void (QEI::*)())'
  164 |         index_.rise(this, &QEI::index);
      |         ~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~
./mbed-os/drivers/include/drivers/InterruptIn.h:106:10: note: candidate: 'void mbed::InterruptIn::rise(mbed::Callback<void()>)'
  106 |     void rise(Callback<void()> func);
      |          ^~~~
./mbed-os/drivers/include/drivers/InterruptIn.h:106:10: note:   candidate expects 1 argument, 2 provided

[mbed] Working path "/home/lilly/Documents/ESP/ESP_Software" (program)
